Fix padding for ul's on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -148,10 +148,6 @@ blockquote {
   h1 {
     font-size: 1em;
   }
-
-  ul {
-    margin-left: 0;
-  }
   
   img,
   picture {
